# star-wars-crawler

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  README.md  config.json  pyproject.toml  requirements.txt  starwars-cli.bat  starwars-cli.py  starwars-cli.sh
.specstory/history/: 2025-07-02_09-34Z-моя-задача-сделать-генератор-видео-как-starwars-cr.md
archive/development_docs/: 3D_PERSPECTIVE_FIX_REPORT.md  ARCHITECTURE.md  BROADCAST_ERROR_SOLVED.md  BROADCAST_FIX_GUIDE.md  CHECKLIST_IMPLEMENTATION_REPORT.md  FINAL_PROJECT_STATUS.md  FINAL_REPORT.md  MOVIEPY_DOCUMENTATION_ANALYSIS.md  NEXT_STEPS_IMPLEMENTATION_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_FINAL_SUMMARY.md  README.md  SAFE_MOVIEPY_PATTERNS.md  project_cleanup_report.md
archive/reports/: final_code_review_report.md  root_cleanup_report.md
docs/: API.md  CHANGELOG.md  CLI.md  DEVELOPER_GUIDE.md  DEVELOPER_SUMMARY.md  EXAMPLES.md  FAQ.md  INDEX.md  OUTPUT_MANAGEMENT_REPORT.md  PERSPECTIVE_FIX_REPORT.md  TILT_CONFIGURATION_GUIDE.md  TILT_CUSTOMIZATION_REPORT.md  cli_implementation_report.md  documentation_restructure_report.md  guideline for Python developers on maintaining order and quality.md
examples/: README.md
examples/configs/: blue_theme_large.json  blue_theme_normal.json  blue_theme_small.json  classic_yellow_large.json  classic_yellow_normal.json  classic_yellow_small.json  demo_config.json  force_awakens.json  green_theme_large.json  green_theme_normal.json  green_theme_small.json  last_jedi.json  purple_theme_large.json  purple_theme_normal.json  purple_theme_small.json  red_theme_large.json  red_theme_normal.json  red_theme_small.json  russian_version.json  test_tilt_extreme.json  test_tilt_high.json  test_tilt_low.json  test_tilt_medium.json  test_tilt_optimal.json
examples/data/: starwars_crawl.json  starwars_crawl.txt
experiments/: main.py  update_config.py
hooks/: pre-commit.py
scripts/: checklist.py  run.bat
src/star_wars_generator/: __init__.py  cli.py  core.py  main.py  test_core.py
src/utils/: __init__.py  moviepy_config.py
tests/: __init__.py  test_integration.py
